[gd_scene load_steps=5 format=3 uid="uid://03v4glbu1jy"]

[ext_resource type="Theme" uid="uid://dhekujp6fflej" path="res://src/UI/Theme.tres" id="1_u8fo4"]
[ext_resource type="Script" path="res://src/UI/InGameMenu/in_game_menu.gd" id="1_unup2"]
[ext_resource type="Texture2D" uid="uid://qrhosvbo0uoj" path="res://src/UI/MainMenu/Art/BackgroundMenu.png" id="3_0dn7e"]
[ext_resource type="PackedScene" uid="uid://b54b4r6alf0jm" path="res://src/UI/MainMenu/OptionsMenu.tscn" id="3_2454d"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u8fo4")
script = ExtResource("1_unup2")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0dn7e")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 228.0
offset_right = 406.0
offset_bottom = 770.0
alignment = 1

[node name="Start_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 70
text = "Continue Game"

[node name="Options_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="Exit_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("3_2454d")]
unique_name_in_owner = true
visible = false
layout_mode = 1
theme = null

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit_button" to="." method="_on_exit_button_pressed"]
